@@ -1,5 +1,8 @@
 2004-11-18  Vincent Noel  <vnoel@cox.net>
 
+	* monitor.c (mon_update_display): Use bold markup to show changes
+	in a monitored log instead of selecting the changed lines.
+
 	* zoom.c: Simplify a lot. Use labels and markup in zoom dialog.
 
 	* info.c (LogInfo): Simplify a lot. Use markup in properties dialog.
